--- a/LondonMeetup.Demo.V8Way/App_Plugins/MyPropertyEditor/lang/en-us.xml
+++ b/LondonMeetup.Demo.V8Way/App_Plugins/MyPropertyEditor/lang/en-us.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <language>
   <area alias="MyPropertyEditor">
-    <key alias="labelForMyAction">My Property Editor Action</key>
+    <key alias="labelForMyAction">Alert value</key>
   </area>
 </language>
